# football-teller

./: App.Dockerfile  Makefile  README.md  Spider.Dockerfile  UI.Dockerfile  app.py  config.cfg  config.py  docker-compose.yml  models.py  nginx.conf  pyproject.toml  scrapy.cfg
chat/: api.py  qa.py
football_spider/: config.cfg  items.py  middlewares.py  pipelines.py  settings.py
football_spider/spiders/: TransfermarkSpider.py
qa-app/: package-lock.json  package.json
qa-app/src/: ChatApp.css  ChatApp.js  ChatMessage.js  index.js
tests/: __init__.py  dump_data.sql  test-docker-compose.yml  test_app.py  test_config.cfg  test_models.py  test_pipelines.py  test_spiders.py
tests/samples/: A-pojat SM-sarja 2023 _ Transfermarkt.html  Ederson - Player profile 23_24 _ Transfermarkt.html  European leagues & cups _ Page 16 _ Transfermarkt.html  European leagues & cups _ Transfermarkt.html  Future Cup 23_24 _ Transfermarkt.html  Manchester City - Club profile _ Transfermarkt.html  Premier League - All fixtures & results _ Transfermarkt.html  Premier League 23_24 _ Transfermarkt.html
