[tool.poetry]
name = "football-teller"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "football_teller"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.10.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
